solved toggle menu not collapsing

--- a/rentals/static/css/navbar.css
+++ b/rentals/static/css/navbar.css
@@ -1,6 +1,3 @@
-h3{
-    color: green;
-}
 .nav-link a{
     color: #ffffff;
     font-size: 1.2em;
